# SandboxEngine

./: .gitignore  .gitmodules  CMakeLists.txt  gitinstall.sh  run.sh
src/: Camera.cpp  DisplayManager.cpp  Main.cpp  Mesh.cpp  Model.cpp  Shader.cpp  glad.c
src/headers/: Camera.h  DisplayManager.h  Mesh.h  Model.h  Renderer.h  Shader.h
src/resources/models/Canti1/: canti_sketchfab.mtl
src/shaders/: frag_core.glsl  vertex_core.glsl
src/shaders/backpack/: f_bp.glsl  v_bp.glsl
src/shaders/light_caster/: f_light_caster.glsl
src/shaders/lighting_maps/: f_lighting_maps.glsl
src/shaders/materials_light_cube/: f_light_cube.glsl
